@@ -86,6 +86,8 @@ UNRELEASED CHANGES
     * List of plugin directories in BZR_PLUGIN_PATH environment variable is
       now parsed properly under Windows. (Alexander Belchenko)
 
+    * Show number of revisions pushed/pulled/merged. (Robey Pointer)
+
   TESTING:
 
     * Fix selftest asking for passwords when there are no SFTP keys.  
